--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "bootstrap": "^5.3.3"
   },
   "scripts": {
-    "test": "jest",  // if you're using jest
-    "test:ci": "jest --ci"  // add the CI version of the test script
+    "test": "jest",
+    "test:ci": "jest --ci"
   }
 }
