--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "scripts": {
     "test": "jest",
     "test:ci": "jest --ci"
+  },
+  "devDependencies": {
+    "@nestjs/testing": "^10.4.1",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   }
 }
