--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   },
   "scripts": {
     "test": "jest",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "start:frontend": "cd frontend && npm run dev",
+    "start:backend": "cd backend && npm run start:dev",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "devDependencies": {
     "@nestjs/testing": "^10.4.1",
     "@types/jest": "^29.5.12",
+    "concurrently": "^9.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
