--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
