feat(general-dashboard): add PopulatedNavBar
Added the PopulatedNavBar component to GeneralDashboard

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
