--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "14.2.8",
+    "next-auth": "^4.24.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "saas": "^1.0.0",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
