--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "bootstrap": "^5.3.3",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-table": "^7.8.0",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
