--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
     "next": "^14.2.13",
     "saas": "^1.0.0"
   },
