--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "install": "^0.13.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "^14.2.13",
+    "react-table": "^7.8.0",
     "saas": "^1.0.0"
   },
   "scripts": {
