[backend][dto] Update contents in app files

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "reflect-metadata": "^0.2.0",
