--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-table": "^7.8.0",
+    "class-validator": "^0.13.2",
     "sass": "^1.79.3"
   },
   "devDependencies": {
