--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "class-validator": "^0.14.1",
     "cross-validator": "^0.0.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
